--- a/koleksi.html
+++ b/koleksi.html
@@ -10,15 +10,17 @@
 <body>
     <header>
         <h1>PERPUSTAKAAN AURA</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Beranda</a></li>
-                <li><a href="Tentang-saya.html">Tentang Saya</a></li> 
-                <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
-            </ul>
-        </nav>
-    </header>
-
+       <header>
+    <button class="menu-toggle">&#9776;</button>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="index.html">Beranda</a></li>
+            <li><a href="Tentang-saya.html">Tentang Saya</a></li>
+            <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
+            <li><a href="koleksi.html">Koleksi</a></li>
+        </ul>
+    </nav>
+</header>
     <div class="container">
         <section class="my-5">
             <h2 class="text-center mb-4">Koleksi Pribadi</h2>
