--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -15,7 +15,7 @@
         <ul class="nav-links">
             <li><a href="index.html">Beranda</a></li>
             <li><a href="Tentang-saya.html">Tentang Saya</a></li>
-            <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
+            <li><a href="Hubungi-kami">Hubungi Kami</a></li>
             <li><a href="koleksi.html">Koleksi</a></li>
         </ul>
     </nav>
