--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 <body> 
        <header>
     <h1>PERPUSTAKAAN AURA</h1>
-    <button class="menu-toggle">&#9776;</button>
+    <button class="menu-toggle">&#9776;</button> <!-- Tombol Menu untuk HP -->
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">Beranda</a></li>
             <li><a href="Tentang-saya.html">Tentang Saya</a></li>
-            <li><a href="Hubungi-kami">Hubungi Kami</a></li>
+            <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
             <li><a href="koleksi.html">Koleksi</a></li>
         </ul>
     </nav>
 </header>
+
 
     <div class="container">
         <section>
