--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -24,9 +24,9 @@
     <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
     <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
     <ul>
-        <li><a href="#">Email</a></li>
-        <li><a href="#">Chat via WhatsApp</a></li>
-        <li><a href="#">Kunjungi Instagram</a></li>
+        <li><a href="mailto:adistyauralesmana@gmail.com">Email</a></li>
+        <li><a href="https://wa.me/6282169656152" target="_blank">Chat via WhatsApp</a></li>
+        <li><a href="https://www.instagram.com/au_rajin">Kunjungi Instagram</a></li>
     </ul>
     <p>Atau, Anda dapat mengisi form di bawah ini:</p>
      <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
