--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body> 
        <header>
     <h1>PERPUSTAKAAN AURA</h1>
-    <button class="menu-toggle">&#9776;</button> <!-- Tombol Menu untuk HP -->
+    <button class="menu-toggle">&#9776;</button>
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">Beranda</a></li>
@@ -20,7 +20,6 @@
         </ul>
     </nav>
 </header>
-
 
     <div class="container">
         <section>
