--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
         });
     });
 </script>  
-    <script src="script.js"></script>
+    <script>
+document.addEventListener("DOMContentLoaded", function () {
+    const menuToggle = document.querySelector(".menu-toggle");
+    const navLinks = document.querySelector(".nav-links");
+
+    menuToggle.addEventListener("click", function () {
+        navLinks.classList.toggle("show");
+    });
+});
+</script>
 </body>
 </html>
