--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -49,6 +49,15 @@
     &copy; Aura Adisty Lesmana 2025
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-     <script src="script.js"></script>
+    <script>
+document.addEventListener("DOMContentLoaded", function () {
+    const menuToggle = document.querySelector(".menu-toggle");
+    const navLinks = document.querySelector(".nav-links");
+
+    menuToggle.addEventListener("click", function () {
+        navLinks.classList.toggle("show");
+    });
+});
+</script>
 </body>
 </html>
