--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         });
     });
 </script>  
+    <script>
    document.addEventListener("DOMContentLoaded", function () {
     const menuToggle = document.querySelector(".menu-toggle");
     const navLinks = document.querySelector(".nav-links");
@@ -66,5 +67,6 @@
         navLinks.classList.toggle("show");
     });
 });
+</script>
 </body>
 </html>
