--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -31,13 +31,13 @@
     <p>Atau, Anda dapat mengisi form di bawah ini:</p>
      <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
         <label>Nama</label><br>
-        <input type="text" placeholder="Masukkan nama Anda"><br><br>
-
+       <input type="text" name="nama" placeholder="Masukkan nama Anda">
+         
         <label>Email</label><br>
-        <input type="email" placeholder="Masukkan email Anda"><br><br>
+        <input type="email" name="email" placeholder="Masukkan email Anda">
 
         <label>Pesan</label><br>
-        <input type="Tulis Pesan Anda" placeholder="Tulis Pesan Anda"><br><br>
+       <textarea name="pesan" placeholder="Tulis Pesan Anda"></textarea>
 
         <button type="submit">Kirim</button>
     </form>
