--- a/index.html
+++ b/index.html
@@ -10,15 +10,30 @@
 <body> 
        <header>
     <h1>PERPUSTAKAAN AURA</h1>
-    <button class="menu-toggle">&#9776;</button>
-    <nav>
-        <ul class="nav-links">
-            <li><a href="index.html">Beranda</a></li>
-            <li><a href="Tentang-saya.html">Tentang Saya</a></li>
-            <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
-            <li><a href="koleksi.html">Koleksi</a></li>
-        </ul>
-    </nav>
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Perpustakaan Aura</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Beranda</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Tentang Saya</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Hubungi Kami</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Koleksi</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 </header>
 
     <div class="container">
