--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -10,26 +10,18 @@
 <body>
 <header>
     <h1>PERPUSTAKAAN AURA</h1>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+ <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Perpustakaan Aura</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Beranda</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Tentang-saya.html">Tentang Saya</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="koleksi.html">Koleksi</a>
-                </li>
+                <li class="nav-item"><a class="nav-link active" href="index.html">Beranda</a></li>
+                <li class="nav-item"><a class="nav-link" href="Tentang-saya.html">Tentang Saya</a></li>
+                <li class="nav-item"><a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a></li>
+                <li class="nav-item"><a class="nav-link" href="koleksi.html">Koleksi</a></li>
             </ul>
         </div>
     </div>
