--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body> 
        <header>
     <h1>PERPUSTAKAAN AURA</h1>
- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-maroon fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Perpustakaan Aura</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -22,7 +22,7 @@
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
-        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+        <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Beranda</a>
           </li>
