--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -10,35 +10,15 @@
 <body>
 <header>
     <h1>PERPUSTAKAAN AURA</h1>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Perpustakaan Aura</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="navbar-nav justify-content-start flex-grow-1">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html">Beranda</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Tentang-saya.html">Tentang Saya</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="koleksi.html">Koleksi</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
+<nav>
+    <ul class="nav-links">
+        <li><a href="index.html">Beranda</a></li>
+        <li><a href="Tentang-saya.html">Tentang Saya</a></li>
+        <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
+        <li class="dropdown">
+            <a href="koleksi.html" class="dropbtn">Koleksi</a>
+        </li>
+    </ul>
 </nav>
 </header>
 <div class="container">
