--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -52,11 +52,19 @@
  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
     <script>
 document.addEventListener("DOMContentLoaded", function () {
-    const menuToggle = document.querySelector(".menu-toggle");
-    const navLinks = document.querySelector(".nav-links");
+    const dropdown = document.querySelector(".dropbtn");
+    const dropdownContent = document.querySelector(".dropdown-content");
 
-    menuToggle.addEventListener("click", function () {
-        navLinks.classList.toggle("show");
+    dropdown.addEventListener("click", function (event) {
+        event.preventDefault(); // Mencegah link default
+        dropdownContent.classList.toggle("show");
+    });
+
+    // Tutup dropdown saat klik di luar
+    window.addEventListener("click", function (event) {
+        if (!dropdown.contains(event.target)) {
+            dropdownContent.classList.remove("show");
+        }
     });
 });
 </script>
