--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -15,9 +15,7 @@
         <li><a href="index.html">Beranda</a></li>
         <li><a href="Tentang-saya.html">Tentang Saya</a></li>
         <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
-        <li class="dropdown">
-            <a href="koleksi.html" class="dropbtn">Koleksi</a>
-        </li>
+        <li><a href="koleksi.html">Koleksi</a></li>
     </ul>
 </nav>
 </header>
