--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
 <body> 
        <header>
     <h1>PERPUSTAKAAN AURA</h1>
-<button class="menu-toggle">&#9776;</button> <!-- Tombol menu -->
-    <nav>
-        <ul class="nav-links">
-            <li><a href="index.html">Beranda</a></li>
-            <li><a href="Tentang-saya.html">Tentang Saya</a></li>
-            <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
-            <li><a href="koleksi.html">Koleksi</a></li>
-        </ul>
-    </nav>
+<nav>
+    <ul class="nav-links">
+        <li><a href="index.html">Beranda</a></li>
+        <li><a href="Tentang-saya.html">Tentang Saya</a></li>
+        <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
+        <li class="dropdown">
+            <a href="koleksi.html" class="dropbtn">Koleksi</a>
+            <div class="dropdown-content">
+                <a href="#">Buku</a>
+                <a href="#">Ebook</a>
+                <a href="#">Artikel</a>
+            </div>
+        </li>
+    </ul>
+</nav>
 </header>
     <div class="container">
         <section>
