--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -17,14 +17,7 @@
         <li><a href="index.html">Beranda</a></li>
         <li><a href="Tentang-saya.html">Tentang Saya</a></li>
         <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
-        <li class="dropdown">
-            <a href="koleksi.html" class="dropbtn">Koleksi</a>
-            <div class="dropdown-content">
-                <a href="#">Buku</a>
-                <a href="#">Ebook</a>
-                <a href="#">Artikel</a>
-            </div>
-        </li>
+        <li><a href="koleksi.html">Koleksi</a></li>
     </ul>
 </nav>
 </header>
