--- a/index.html
+++ b/index.html
@@ -10,19 +10,12 @@
 <body> 
        <header>
     <h1>PERPUSTAKAAN AURA</h1>
-<nav>
+ <nav>
     <ul class="nav-links">
         <li><a href="index.html">Beranda</a></li>
         <li><a href="Tentang-saya.html">Tentang Saya</a></li>
         <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
-        <li class="dropdown">
-            <a href="koleksi.html" class="dropbtn">Koleksi</a>
-            <div class="dropdown-content">
-                <a href="#">Buku</a>
-                <a href="#">Ebook</a>
-                <a href="#">Artikel</a>
-            </div>
-        </li>
+        <li><a href="koleksi.html">Koleksi</a></li>
     </ul>
 </nav>
 </header>
