--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -13,13 +13,13 @@
 <header>
     <h1>PERPUSTAKAAN AURA</h1>
    <nav>
-    <ul class="nav-links">
-        <li><a href="index.html">Beranda</a></li>
-        <li><a href="Tentang-saya.html">Tentang Saya</a></li>
-        <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
-        <li><a href="koleksi.html">Koleksi</a></li>
-    </ul>
-</nav>
+        <ul class="nav justify-content-center">
+            <li class="nav-item"><a class="nav-link text-white" href="index.html">Beranda</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Tentang-saya.html">Tentang Saya</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Hubungi-kami.html">Hubungi Kami</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="koleksi.html">Koleksi</a></li>
+        </ul>
+    </nav>
 </header>
 <div class="container">
     <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
