--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -10,14 +10,14 @@
 <body>
 <header>
     <h1>PERPUSTAKAAN AURA</h1>
- <nav>
-    <ul class="nav-links">
-        <li><a href="index.html">Beranda</a></li>
-        <li><a href="Tentang-saya.html">Tentang Saya</a></li>
-        <li><a href="Hubungi-kami.html">Hubungi Kami</a></li>
-        <li><a href="koleksi.html">Koleksi</a></li>
-    </ul>
-</nav>
+  <nav>
+        <ul class="nav justify-content-center">
+            <li class="nav-item"><a class="nav-link text-white" href="index.html">Beranda</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Tentang-saya.html">Tentang Saya</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="Hubungi-kami.html">Hubungi Kami</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="koleksi.html">Koleksi</a></li>
+        </ul>
+    </nav>
 </header>
 <div class="container">
     <h2>Data Pribadi</h2>
@@ -55,23 +55,5 @@
     &copy; Aura Adisty Lesmana 2025
 </footer>
  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-    <script>
-document.addEventListener("DOMContentLoaded", function () {
-    const dropdown = document.querySelector(".dropbtn");
-    const dropdownContent = document.querySelector(".dropdown-content");
-
-    dropdown.addEventListener("click", function (event) {
-        event.preventDefault(); // Mencegah link default
-        dropdownContent.classList.toggle("show");
-    });
-
-    // Tutup dropdown saat klik di luar
-    window.addEventListener("click", function (event) {
-        if (!dropdown.contains(event.target)) {
-            dropdownContent.classList.remove("show");
-        }
-    });
-});
-</script>
 </body>
 </html>
