--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
 <body> 
        <header>
     <h1>PERPUSTAKAAN AURA</h1>
-  <nav>
-        <ul class="nav justify-content-center">
-            <li class="nav-item"><a class="nav-link text-white" href="index.html">Beranda</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="Tentang-saya.html">Tentang Saya</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="Hubungi-kami.html">Hubungi Kami</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="koleksi.html">Koleksi</a></li>
-        </ul>
-    </nav>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
+                <li class="nav-item"><a class="nav-link" href="Tentang-saya.html">Tentang Saya</a></li>
+                <li class="nav-item"><a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a></li>
+                <li class="nav-item"><a class="nav-link" href="koleksi.html">Koleksi</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 </header>
     <div class="container">
         <section>
