--- a/index.html
+++ b/index.html
@@ -10,20 +10,13 @@
 <body> 
        <header>
     <h1>PERPUSTAKAAN AURA</h1>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
-                <li class="nav-item"><a class="nav-link" href="Tentang-saya.html">Tentang Saya</a></li>
-                <li class="nav-item"><a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a></li>
-                <li class="nav-item"><a class="nav-link" href="koleksi.html">Koleksi</a></li>
-            </ul>
-        </div>
-    </div>
+<nav>
+    <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
+        <li class="nav-item"><a class="nav-link" href="Tentang-saya.html">Tentang Saya</a></li>
+        <li class="nav-item"><a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a></li>
+        <li class="nav-item"><a class="nav-link" href="koleksi.html">Koleksi</a></li>
+    </ul>
 </nav>
 </header>
     <div class="container">
