--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <h1>PERPUSTAKAAN AURA</h1>
+    <h1 class="text-center">PERPUSTAKAAN AURA</h1>
    <nav>
         <ul class="nav justify-content-center">
             <li class="nav-item"><a class="nav-link text-white" href="index.html">Beranda</a></li>
