--- a/koleksi.html
+++ b/koleksi.html
@@ -10,14 +10,14 @@
 <body>
 <header>
     <h1>PERPUSTAKAAN AURA</h1>
- <nav>
-        <ul class="nav justify-content-center">
-            <li class="nav-item"><a class="nav-link text-white" href="index.html">Beranda</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="Tentang-saya.html">Tentang Saya</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="Hubungi-kami.html">Hubungi Kami</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="koleksi.html">Koleksi</a></li>
-        </ul>
-    </nav>
+<nav>
+    <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
+        <li class="nav-item"><a class="nav-link" href="Tentang-saya.html">Tentang Saya</a></li>
+        <li class="nav-item"><a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a></li>
+        <li class="nav-item"><a class="nav-link" href="koleksi.html">Koleksi</a></li>
+    </ul>
+</nav>
 </header>
     <div class="container">
         <section class="my-5">
