--- a/index.html
+++ b/index.html
@@ -10,31 +10,14 @@
 <body> 
        <header>
     <h1>PERPUSTAKAAN AURA</h1>
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"
-                Perpustakaan AURA
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Beranda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Tentang-saya.html">Tentang Saya</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a>
-                    <li class="nav-item">
-                        <a class="nav-link" href="koleksi.html">Koleksi</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<nav>
+    <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
+        <li class="nav-item"><a class="nav-link" href="Tentang-saya.html">Tentang Saya</a></li>
+        <li class="nav-item"><a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a></li>
+        <li class="nav-item"><a class="nav-link" href="koleksi.html">Koleksi</a></li>
+    </ul>
+</nav>
 </header>
     <div class="container">
         <section>
