--- a/Tentang-saya.html
+++ b/Tentang-saya.html
@@ -8,15 +8,15 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
+<header class="text-center py-3">
     <h1>PERPUSTAKAAN AURA</h1>
-<nav>
-    <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
-        <li class="nav-item"><a class="nav-link" href="Tentang-saya.html">Tentang Saya</a></li>
-        <li class="nav-item"><a class="nav-link" href="Hubungi-kami.html">Hubungi Kami</a></li>
-        <li class="nav-item"><a class="nav-link" href="koleksi.html">Koleksi</a></li>
-    </ul>
+<nav class="navbar">
+    <div class="container d-flex justify-content-center">
+        <a href="index.html" class="btn btn-custom mx-2">Beranda</a>
+        <a href="Tentang-saya.html" class="btn btn-custom mx-2">Tentang Saya</a>
+        <a href="Hubungi-kami.html" class="btn btn-custom mx-2">Hubungi Kami</a>
+        <a href="koleksi.html" class="btn btn-custom mx-2">Koleksi</a>
+    </div>
 </nav>
 </header>
 <div class="container">
