--- a/index.html
+++ b/index.html
@@ -4,57 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpustakaan Aura</title>
-   <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #4c0b0b;
+            color: #fff;
+        }
+        .navbar {
+            background-color: #8B0000;
+        }
+        .navbar-brand {
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: #F5DEB3 !important;
+        }
+        .nav-link {
+            color: #F5DEB3 !important;
+        }
+        .nav-link:hover {
+            color: #fff !important;
+        }
+        .btn-custom {
+            background-color: #D2691E;
+            color: #fff;
+            border-radius: 8px;
+            padding: 8px 16px;
+        }
+        .btn-custom:hover {
+            background-color: #A0522D;
+            color: #fff;
+        }
+    </style>
 </head>
-<body> 
-    <header class="text-center py-3">
-    <h1>PERPUSTAKAAN AURA</h1>
-<nav class="navbar">
-    <div class="container d-flex justify-content-center">
-        <a href="index.html" class="btn btn-custom mx-2">Beranda</a>
-        <a href="Tentang-saya.html" class="btn btn-custom mx-2">Tentang Saya</a>
-        <a href="Hubungi-kami.html" class="btn btn-custom mx-2">Hubungi Kami</a>
-        <a href="koleksi.html" class="btn btn-custom mx-2">Koleksi</a>
-    </div>
-</nav>
-</header>
-    <div class="container">
-        <section>
-            <h2>Selamat Datang di Perpustakaan Aura!</h2>
-            <p>Halo! Nama saya <b>Aura Adisty Lesmana</b>, dan saya dengan bangga mempersembahkan <b>Perpustakaan Aura</b>, sebuah perpustakaan pribadi yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
-                Perpustakaan ini hadir sebagai ruang digital yang memungkinkan siapa saja untuk mengakses berbagai koleksi buku pribadi, arsip tugas perkuliahan, serta e-book yang dapat diunduh secara gratis. 
-                Melalui perpustakaan ini, saya berharap dapat memberikan manfaat bagi mahasiswa, peneliti, dan pecinta literasi yang ingin memperluas wawasan di berbagai bidang. 
-                Selain itu, saya juga menjalin kerja sama dan merujuk pada berbagai sumber akademik, termasuk Perpustakaan Universitas Indonesia, untuk memperkaya referensi dan memastikan ketersediaan bahan bacaan yang berkualitas. 
-                Silakan jelajahi koleksi yang tersedia, manfaatkan sumber daya yang ada, dan mari bersama-sama membangun komunitas literasi yang dinamis serta saling berbagi pengetahuan!</p>
-        </section>
-
-        <section>
-            <h2>Kerja Sama dan Referensi</h2> 
-         <li> <a href="https://lib.ui.ac.id/" target="_blank">Perpustakaan Universitas Indonesia</a>
-        </li>
-            <li> <a href="https://library.usu.ac.id/" target="_blank">Perpustakaan Universitas Sumatera Utara</a>
-        </li>
-            <li> <a href="https://lib.unri.ac.id/" target="_blank">Perpustakaan Universitas Riau</a> 
-        </li>
-        </section>
-    </div>
-    <footer>
-        &copy; 2025 Perpustakaan Aura
-    </footer>
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const navbar = document.querySelector("nav");
-
-        navbar.addEventListener("mouseover", function () {
-            navbar.style.background = "rgba(255, 235, 205, 0.9)"; // Warna cream saat hover
-        });
-
-        navbar.addEventListener("mouseout", function () {
-            navbar.style.background = "maroon"; // Kembali ke warna maroon
-        });
-    });
-</script>  
+<body>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">PERPUSTAKAAN AURA</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="index.html">Beranda</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="Tentang-saya.html">Tentang Saya</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="Hubungi-kami.html">Hubungi Kami</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="koleksi.html">Koleksi</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
