--- a/index.html
+++ b/index.html
@@ -5,36 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpustakaan Aura</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #4c0b0b;
-            color: #fff;
-        }
-        .navbar {
-            background-color: #8B0000;
-        }
-        .navbar-brand {
-            font-size: 1.8rem;
-            font-weight: bold;
-            color: #F5DEB3 !important;
-        }
-        .nav-link {
-            color: #F5DEB3 !important;
-        }
-        .nav-link:hover {
-            color: #fff !important;
-        }
-        .btn-custom {
-            background-color: #D2691E;
-            color: #fff;
-            border-radius: 8px;
-            padding: 8px 16px;
-        }
-        .btn-custom:hover {
-            background-color: #A0522D;
-            color: #fff;
-        }
-    </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
