--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
             </div>
         </div>
     </nav>
+    <div class="container">
+        <section>
+            <h2>Selamat Datang di Perpustakaan Aura!</h2>
+            <p>Halo! Nama saya <b>Aura Adisty Lesmana</b>, dan saya dengan bangga mempersembahkan <b>Perpustakaan Aura</b>, sebuah perpustakaan pribadi yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
+                Perpustakaan ini hadir sebagai ruang digital yang memungkinkan siapa saja untuk mengakses berbagai koleksi buku pribadi, arsip tugas perkuliahan, serta e-book yang dapat diunduh secara gratis. 
+                Melalui perpustakaan ini, saya berharap dapat memberikan manfaat bagi mahasiswa, peneliti, dan pecinta literasi yang ingin memperluas wawasan di berbagai bidang. 
+                Selain itu, saya juga menjalin kerja sama dan merujuk pada berbagai sumber akademik, termasuk Perpustakaan Universitas Indonesia, untuk memperkaya referensi dan memastikan ketersediaan bahan bacaan yang berkualitas. 
+                Silakan jelajahi koleksi yang tersedia, manfaatkan sumber daya yang ada, dan mari bersama-sama membangun komunitas literasi yang dinamis serta saling berbagi pengetahuan!</p>
+        </section>
+
+        <section>
+            <h2>Kerja Sama dan Referensi</h2> 
+         <li> <a href="https://lib.ui.ac.id/" target="_blank">Perpustakaan Universitas Indonesia</a>
+        </li>
+            <li> <a href="https://library.usu.ac.id/" target="_blank">Perpustakaan Universitas Sumatera Utara</a>
+        </li>
+            <li> <a href="https://lib.unri.ac.id/" target="_blank">Perpustakaan Universitas Riau</a> 
+        </li>
+        </section>
+    </div>
+    <footer>
+        &copy; 2025 Perpustakaan Aura
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
