--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -8,17 +8,30 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="text-center py-3">
-    <h1>PERPUSTAKAAN AURA</h1>
-<nav class="navbar">
-    <div class="container d-flex justify-content-center">
-        <a href="index.html" class="btn btn-custom mx-2">Beranda</a>
-        <a href="Tentang-saya.html" class="btn btn-custom mx-2">Tentang Saya</a>
-        <a href="Hubungi-kami.html" class="btn btn-custom mx-2">Hubungi Kami</a>
-        <a href="koleksi.html" class="btn btn-custom mx-2">Koleksi</a>
-    </div>
-</nav>
-</header>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">PERPUSTAKAAN AURA</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="index.html">Beranda</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="Tentang-saya.html">Tentang Saya</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="Hubungi-kami.html">Hubungi Kami</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="koleksi.html">Koleksi</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 <div class="container">
     <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
     <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
