--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -42,9 +42,9 @@
     </ul>
     <p>Atau, Anda dapat mengisi form di bawah ini:</p>
      <form action="https://formsubmit.co/adistyauralesmana@gmail.com" method="POST">
-        <label>Nama</label><br>
+         <label for="nama" style="font-weight: bold;">Nama</label>
        <input type="text" name="nama" placeholder="Masukkan nama Anda">
-         
+        
         <label>Email</label><br>
         <input type="email" name="email" placeholder="Masukkan email Anda">
 
