--- a/Hubungi-kami.html
+++ b/Hubungi-kami.html
@@ -45,10 +45,10 @@
          <label for="nama" style="font-weight: bold;">Nama</label>
        <input type="text" name="nama" placeholder="Masukkan nama Anda">
         
-        <label>Email</label><br>
+       <label for="email" style="font-weight: bold;">Email</label>
         <input type="email" name="email" placeholder="Masukkan email Anda">
 
-        <label>Pesan</label><br>
+         <label for="pesan" style="font-weight: bold;">Pesan</label>
        <textarea name="pesan" placeholder="Tulis Pesan Anda"></textarea>
 
         <button type="submit">Kirim</button>
