--- a/koleksi.html
+++ b/koleksi.html
@@ -44,7 +44,7 @@
                         <h5 class="card-title">Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS</h5>
                         <p class="card-text">Buku Map of the Soul 7: Persona, Shadow & Ego in the World of BTS ditulis oleh Murray Stein, seorang penulis buku tentang kejiwaan manusia yang berpusat pada pendekatan psikoanaisis Carl Gustav Jung. 
                             Buku Map of the Soul 7 ini merupakan buku terakhir dari buku seri Map of the Soul. Buku ini melengkapi buku seri sebelumnya, yakni Jung’s Map of the Soul: An Introduction, dan Map of the Soul: Persona.</p>
-                        <a href="https://www.gramedia.com/best-seller/review-buku-map-of-the-soul-7-persona-shadow-ego/" class="btn-Lihat Lebih Lanjutn" target="_blank">Lihat Lebih Lanjut</a>
+                        <a href="https://www.gramedia.com/best-seller/review-buku-map-of-the-soul-7-persona-shadow-ego/" target="_blank" class="btn-Lihat Lebih Lanjutn">Lihat Lebih Lanjut</a>
                     </div>
                 </div>
             </div>
