--- a/koleksi.html
+++ b/koleksi.html
@@ -56,7 +56,7 @@
                             <h5 class="card-title">Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?</h5>
                             <p class="card-text">Tulisan-tulisan ini memiliki keterkaitan dengan keseharian seseorang, sehingga pembaca bisa merasa terhubung dengan buku ini.
                                 Beberapa topik yang dibahas di dalam buku ini misalnya mengenai kesalahan dalam hidup, keegoisan, sifat baik terhadap sesama, rasa gugup, mimpi, penilaian terhadap orang lain, dan terakhir, mengenai apa itu definisi kebaikan menurut sang penulis.</p>
-                            <a href="#" class="btn-Lihat Lebih Lanjut">Lihat Lebih Lanjut</a>
+                            <a href="https://www.gramedia.com/best-seller/review-buku-siapa-yang-datang-ke-pemakamanku-saat-aku-mati-nanti/" target="_blank" class="btn-Lihat Lebih Lanjut">Lihat Lebih Lanjut</a>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                             <h5 class="card-title">The Midnight Library</h5>
                             <p class="card-text">Perpustakaan Tengah Malam karya Matt Haig adalah sebuah novel yang mempesona karena membawa pembaca berpetualang menjelajahi kemungkinan kehidupan-kehidupan Nora Seed di rak perpustakaan. 
                                 Buku ini berbicara tentang penyesalan, hubungan, mimpi, hewan peliharaan, persahabatan, kemungkinan yang akan terjadi, dan yang paling penting bagaimana menjalani hidup di masa sekarang dan memanfaatkannya sebaik mungkin.</p>
-                            <a href="#" class="btn-baca">Baca</a>
+                            <a href="https://www.gramedia.com/best-seller/review-novel-the-midnight-library-karya-matt-haig/" target="_blank" class="btn-Lihat-Review">Lihat Review</a>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                                 Novel Kitchen pertama kali diterbitkan pada tahun 1988 dan sudah diterjemahkan ke dalam Bahasa Inggris pada tahun 1993 oleh Megan Backus. 
                                 Seluruh tokoh dalam kumpulan novel ini mengalami pergulatan batin akibat ditinggalkan oleh orang yang mereka cintai. 
                                 Seperti kakek, nenek, orang tua, dan juga kekasih. Mereka menghadapi keseharian mereka yang terus berjalan, kemudian mereka sadar dalam kesepian yang dialaminya bahwa dunia ini penuh dengan keseimbangan unik di tengah kehidupan dan kematian.</p>
-                            <a href="#" class="btn-baca">Baca</a>
+                            <a href="https://www.gramedia.com/best-seller/review-novel-kitchen-karya-yoshimoto-banana/" target="_blank" class="btn-Lihat-Review">Lihat Review</a>
                         </div>
                     </div>
                 </div>
