--- a/koleksi.html
+++ b/koleksi.html
@@ -41,10 +41,10 @@
                 <div class="card" style="width: 18rem;">
                     <img src="gambar/MOTS 7.jpg" class="card-img-top" alt="Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS">
                     <div class="card-body">
-                        <h5 class="card-title">Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS</h5>
+                        <h5 class="card-title" style="color: #800000; font-weight: bold;">Map of The Soul 7: Persona, Shadow, & Ego dalam Dunia BTS</h5>
                         <p class="card-text">Buku Map of the Soul 7: Persona, Shadow & Ego in the World of BTS ditulis oleh Murray Stein, seorang penulis buku tentang kejiwaan manusia yang berpusat pada pendekatan psikoanaisis Carl Gustav Jung. 
                             Buku Map of the Soul 7 ini merupakan buku terakhir dari buku seri Map of the Soul. Buku ini melengkapi buku seri sebelumnya, yakni Jung’s Map of the Soul: An Introduction, dan Map of the Soul: Persona.</p>
-                        <a href="https://www.gramedia.com/best-seller/review-buku-map-of-the-soul-7-persona-shadow-ego/" target="_blank" class="btn-Lihat Lebih Lanjutn">Lihat Lebih Lanjut</a>
+                        <a href="https://www.gramedia.com/best-seller/review-buku-map-of-the-soul-7-persona-shadow-ego/" target="_blank" class="btn-Lihat-Review">Lihat Review</a>
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                             <h5 class="card-title">Siapa yang Datang ke Pemakamanku Saat Aku Mati Nanti?</h5>
                             <p class="card-text">Tulisan-tulisan ini memiliki keterkaitan dengan keseharian seseorang, sehingga pembaca bisa merasa terhubung dengan buku ini.
                                 Beberapa topik yang dibahas di dalam buku ini misalnya mengenai kesalahan dalam hidup, keegoisan, sifat baik terhadap sesama, rasa gugup, mimpi, penilaian terhadap orang lain, dan terakhir, mengenai apa itu definisi kebaikan menurut sang penulis.</p>
-                            <a href="https://www.gramedia.com/best-seller/review-buku-siapa-yang-datang-ke-pemakamanku-saat-aku-mati-nanti/" target="_blank" class="btn-Lihat Lebih Lanjut">Lihat Lebih Lanjut</a>
+                            <a href="https://www.gramedia.com/best-seller/review-buku-siapa-yang-datang-ke-pemakamanku-saat-aku-mati-nanti/" target="_blank" class="btn-Lihat-Review">Lihat Review</a>
                         </div>
                     </div>
                 </div>
