--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                      <li class="nav-item">
                         <a class="btn btn-custom mx-1" href="koleksi.html">Koleksi</a>
                     </li>
+                     <li class="nav-item">
+                        <a class="btn btn-custom mx-1" href="tabel_perkalian.html">Tabel Perkalian</a>
+                    </li>
                 </ul>
             </div>
         </div>
