--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="btn btn-custom mx-1" href="koleksi.html">Koleksi</a>
                     </li>
                      <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="tabel_perkalian.html">Tabel Perkalian</a>
+                        <a class="btn btn-custom mx-1" href="tabel.php">Tabel Perkalian</a>
                     </li>
                 </ul>
             </div>
