--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="btn btn-custom mx-1" href="tabel.php">Tabel Perkalian</a>
                     </li>
                      <li class="nav-item">
-                        <a class="btn btn-custom mx-1" href="tabel (3).php">Formulir Kunjungan</a>
+                        <a class="btn btn-custom mx-1" href="Formulir_kunjungan.php">Formulir Kunjungan</a>
                     </li>
                 </ul>
             </div>
