--- a/index.html
+++ b/index.html
@@ -90,27 +90,45 @@
 
  <section>
             <h2>Event Sastra Terkini</h2>
-            <ul>
-                <li>
-                    <strong>✨ Perjamuan Setahun Jokpin ✨</strong><br>
-                    Mari kita rayakan warisan puisi Joko Pinurbo, dalam sebuah perjamuan penuh kenangan, tepat setahun setelah kepergiannya.<br>
-                    📍 Gramedia Sudirman Yogyakarta<br>
-                    📅 Minggu, 27 April 2025<br>
-                    🕕 18.00 – selesai<br>
-                    <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" target="_blank">Baca selengkapnya</a>
-                </li>
-                <br>
-                <li>
-                    <strong>Panggung Puisi Keliling #TernyataTanpamu</strong><br>
-                    Bersama Natasha Rizky<br>
-                    📍 Gramedia Tunjungan Plaza Surabaya<br>
-                    📅 Sabtu, 26 April 2025<br>
-                    ⏰ Pukul 15.00 – 17.00 WIB<br>
-                    <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" target="_blank">Baca selengkapnya</a>
-                </li>
-            </ul>
-        </section>
+     <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+
+    <div class="carousel-item active">
+      <div class="d-flex justify-content-center">
+        <div class="card event-card">
+          <div class="card-body">
+            <h5 class="card-title">Perjamuan Setahun Jokpin</h5>
+            <p class="card-text">27 April 2025 - Gramedia Sudirman Yogyakarta</p>
+            <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="carousel-item">
+      <div class="d-flex justify-content-center">
+        <div class="card event-card">
+          <div class="card-body">
+            <h5 class="card-title">Panggung Puisi Keliling #TernyataTanpamu</h5>
+            <p class="card-text">26 April 2025 - Gramedia Tunjungan Plaza Surabaya</p>
+            <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#eventCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
 
     <footer>
         &copy; 2025 Perpustakaan Aura
