--- a/index.html
+++ b/index.html
@@ -129,8 +129,11 @@ nav ul li a:hover {
       <div class="d-flex justify-content-center">
         <div class="card event-card">
           <div class="card-body">
-            <h5 class="card-title">Perjamuan Setahun Jokpin</h5>
-            <p class="card-text">27 April 2025 - Gramedia Sudirman Yogyakarta</p>
+            <h5 class="card-title">✨Perjamuan Setahun Jokpin✨</h5>
+            <p class="card-text">  
+                📅 27 April 2025
+                📍Gramedia Sudirman Yogyakarta
+              🕕 18.00 – selesai</p>
             <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
           </div>
         </div>
@@ -141,8 +144,11 @@ nav ul li a:hover {
       <div class="d-flex justify-content-center">
         <div class="card event-card">
           <div class="card-body">
-            <h5 class="card-title">Panggung Puisi Keliling #TernyataTanpamu</h5>
-            <p class="card-text">26 April 2025 - Gramedia Tunjungan Plaza Surabaya</p>
+            <h5 class="card-title">✨Panggung Puisi Keliling #TernyataTanpamu✨</h5>
+            <p class="card-text">
+                📅26 April 2025
+                📍Gramedia Tunjungan Plaza Surabaya
+            ⏰ Pukul 15.00 – 17.00 WIB</p>
             <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
           </div>
         </div>
