--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ nav ul li a:hover {
           <div class="card-body">
             <h5 class="card-title">✨Perjamuan Setahun Jokpin✨</h5>
             <p class="card-text">  
-                📅 27 April 2025
-                📍Gramedia Sudirman Yogyakarta
-              🕕 18.00 – selesai</p>
+               <li>📅 27 April 2025</li>
+                <li>📍Gramedia Sudirman Yogyakarta</li>
+              <li>🕕 18.00 – selesai</li></p>
             <a href="https://www.gramedia.id/events/read/perjamuan-setahun-joko-pinurbo-yang-terbuat-dari-rindu-pulang-dan-angkringan" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
           </div>
         </div>
@@ -146,9 +146,9 @@ nav ul li a:hover {
           <div class="card-body">
             <h5 class="card-title">✨Panggung Puisi Keliling #TernyataTanpamu✨</h5>
             <p class="card-text">
-                📅26 April 2025
-                📍Gramedia Tunjungan Plaza Surabaya
-            ⏰ Pukul 15.00 – 17.00 WIB</p>
+                <li>📅26 April 2025</li>
+                <li>📍Gramedia Tunjungan Plaza Surabaya</li>
+           <li>⏰ Pukul 15.00 – 17.00 WIB</li></p>
             <a href="https://www.gramedia.id/events/read/panggung-puisi-keliling-ternyatatanpamu-bersama-natasha-rizky-surabaya" class="btn btn-primary" target="_blank">Baca Selengkapnya</a>
           </div>
         </div>
