--- a/index.html
+++ b/index.html
@@ -50,12 +50,19 @@ nav ul li a:hover {
 }
 
 .event-card a {
-  color: #800000;
-  text-decoration: underline;
+  display: inline-block;
+  background-color: #800000; /* maroon */
+  color: #FFF5E1; /* krem */
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .event-card a:hover {
-  color: #a52a2a;
+  background-color: #a52a2a; /* maroon yang sedikit lebih terang saat hover */
+  color: #ffffff;
 }
 </style>
 </head>
